[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-stats"
version = "0.2.0"
description = "Analyze Claude Code skill usage from session JSONL logs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skill-stats = "skill_stats:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["skill_stats"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
